# acceldocs-backend

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  E2E_TEST_REPORT.md  JINJA_DASHBOARD_PLAN.md  TESTING_AND_DEPLOYMENT_SUMMARY.md  acceldocs.db-shm  alembic.ini  migration_state.json  pyproject.toml  railway.json  requirements.txt  test_api.py  vercel.json
api/: index.py
app/: config.py  database.py  main.py  models.py
app/api/: agent_chat.py  (+23 more)
docs/: PRESENTATION.md  PRESENTATION.pptx
external_crawler/: Dockerfile  main.py  requirements.txt
migration_states/: migration_state_odp.json
migrations/: env.py
scripts/: README_migration.md  backfill_projects_from_documents.py  create_oauth_token.py  find_credentials.py  migrate_developerhub.py  migrate_developerhub_api.py  migrate_strapi.py  migrate_version.py  verify_migration_parity.py
tests/: conftest.py  test_approvals.py  test_auth.py  test_auth_invite_callback.py  test_conversion.py  test_documents.py  test_drive_classify.py  test_drive_export.py  test_drive_import_hierarchy.py  test_drive_root_folder.py  test_e2e_analytics.py  test_e2e_auth.py  test_e2e_workflow.py  test_external_access_api.py  test_health.py  test_join_request_flow.py  test_landing_page_flatten.py  test_markdown_import.py  test_metadata.py  test_migration_hierarchy_merge.py  test_mkdocs_gen.py  test_org_drive_acl_sync.py  test_page_link_redirects.py  test_pages_actions.py  test_public_mcp.py  test_public_tabs.py  test_public_visibility.py  test_publish_path_resolution.py  test_rbac.py  test_sections_tabs.py  test_verify_migration_parity.py  (+1 more)
(+65 files in other folders)
